--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "next": "15.0.3",
     "next-themes": "^0.4.3",
     "react": "^18.2.0",
+    "react-countup": "^6.5.3",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.2",
